# trash_rust

./: .gitignore  Cargo.toml
src/: main.c  main.ll  main.rs  main1.ll  main2.rs
